--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "jmm",
   "type": "module",
   "version": "0.0.1",
+  "private": true,
+  "browserslist": [
+    "defaults"
+  ],
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
@@ -17,6 +21,7 @@
     "alpinejs": "^3.14.1",
     "astro": "^4.13.0",
     "astro-icon": "^1.1.0",
+    "sharp": "^0.33.4",
     "tailwindcss": "^3.4.7",
     "typescript": "^5.5.4"
   },
