--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@astrojs/alpinejs": "^0.4.0",
     "@astrojs/check": "^0.9.1",
     "@astrojs/tailwind": "^5.1.0",
+    "@astrojs/vercel": "^7.7.2",
     "@types/alpinejs": "^3.13.10",
+    "@vercel/analytics": "^1.3.1",
     "alpinejs": "^3.14.1",
     "astro": "^4.13.0",
     "astro-icon": "^1.1.0",
