--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@astrojs/vercel": "^7.7.2",
     "@types/alpinejs": "^3.13.10",
     "@vercel/analytics": "^1.3.1",
+    "@vercel/speed-insights": "^1.0.12",
     "alpinejs": "^3.14.1",
     "astro": "^4.13.0",
     "astro-icon": "^1.1.0",
